// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layouts RandomNotes snapshots contain data content when requesting result is not empty in desktop 1`] = `
<ul
  class="MuiImageList-root"
  style="margin: -10px;"
>
  <li
    class="MuiImageListItem-root WhiteRandomNotes-imageListItem"
    style="width: 25%; height: 270px; padding: 10px;"
  >
    <div
      class="MuiImageListItem-item"
    >
      <img
        alt="title"
        class="WhiteRandomNotes-img"
        loading="lazy"
        src="image"
      />
      <div
        class="MuiImageListItemBar-root WhiteRandomNotes-imageListItemBar MuiImageListItemBar-positionBottom"
      >
        <div
          class="MuiImageListItemBar-titleWrap"
        >
          <div
            class="MuiImageListItemBar-title"
          >
            title
          </div>
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`layouts RandomNotes snapshots contain data content when requesting result is not empty in mobile 1`] = `
<ul
  class="MuiImageList-root"
  style="margin: -10px;"
>
  <li
    class="MuiImageListItem-root WhiteRandomNotes-imageListItem"
    style="width: 100%; height: 270px; padding: 10px;"
  >
    <div
      class="MuiImageListItem-item"
    >
      <img
        alt="title"
        class="WhiteRandomNotes-img"
        loading="lazy"
        src="image"
      />
      <div
        class="MuiImageListItemBar-root WhiteRandomNotes-imageListItemBar MuiImageListItemBar-positionBottom"
      >
        <div
          class="MuiImageListItemBar-titleWrap"
        >
          <div
            class="MuiImageListItemBar-title"
          >
            title
          </div>
        </div>
      </div>
    </div>
  </li>
</ul>
`;
